# cccd-rust-playground

./: .gitmodules  README.md
bootstrap/: rust-activate.sh
misc/: build-upx.sh
projects/guessing_game/: Cargo.toml
projects/libarchive/: Cargo.toml  build.sh
projects/libarchive/src/: archive.rs  main.rs
projects/libbindgen_example/: Cargo.toml  build.rs  wrapper.h
